--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
     "pg": "^4.4.3",
+    "promise.prototype.finally": "^1.0.1",
     "restify": "^4.0.3",
     "superagent": "^1.4.0",
     "superagent-promise": "^1.0.3"
