--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "babel": "^5.8.23",
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
+    "mime": "^1.3.4",
     "pg": "^4.4.3",
     "promise.prototype.finally": "^1.0.1",
+    "request": "^2.65.0",
     "restify": "^4.0.3",
     "superagent": "^1.4.0",
     "superagent-promise": "^1.0.3"
