--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "babel": "^5.8.23",
+    "cheerio": "^0.19.0",
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
+    "lodash": "^3.10.1",
     "mime": "^1.3.4",
     "pg": "^4.4.3",
     "promise.prototype.finally": "^1.0.1",
