--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "start": "node --harmony .",
     "start-dev": "nodemon --harmony .",
-    "test": "node_modules/.bin/mocha --compilers js:babel/register --require='./test/test_helper' 'test/**/*.@(js|jsx)'",
+    "test": "node_modules/.bin/mocha --compilers js:babel-register --require='./test/test_helper' 'test/**/*.@(js|jsx)'",
     "test:watch": "nodemon node_modules/.bin/mocha --compilers js:babel/register --require='./test/test_helper' 'test/**/*.@\\(js\\|jsx\\)'  -e js,jsx,html -V"
   },
   "author": "Dimitri Vorona",
   "license": "ISC",
   "dependencies": {
-    "babel": "^5.8.23",
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-register": "^6.8.0",
     "cheerio": "^0.19.0",
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
@@ -20,7 +23,7 @@
     "mime": "^1.3.4",
     "pg": "^4.4.3",
     "promise.prototype.finally": "^1.0.1",
-    "request": "^2.65.0",
+    "request": "^2.72.0",
     "restify": "^4.0.3",
     "superagent": "^1.4.0",
     "superagent-promise": "^1.0.3"
