--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
   "presets": ["es2015", "stage-1"],
   "plugins": [
-    "add-module-exports"
+    "add-module-exports",
+    ["transform-runtime", {
+      "polyfill": false,
+      "regenerator": true
+    }]
   ]
 }
