--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.8.0",
+    "babel-runtime": "^6.9.2",
     "cheerio": "^0.19.0",
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
@@ -30,6 +31,7 @@
     "superagent-promise": "^1.0.3"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.9.0",
     "chai": "^3.4.0",
     "chai-as-promised": "^5.1.0",
     "mocha": "^2.3.3",
